- Add supplier invoices feature

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "c-delouvencourt/laravel-pennylane",
     "description": "Pennylane API wrapper for Laravel 11",
+    "version": "1.0.0",
     "keywords": [
         "Laravel",
         "Pennylane",
